[project]
name = "sublime_aio"
version = "0.1.0"
description = "asyncio for Sublime Text"
readme = "README.md"
authors = [
    {name = "DeathAxe"},
]

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]

[dependency-groups]
dev = [
    "typing-extensions>=4.13.2",
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
