[project]
name = "sublime_aio"
dynamic = ["version"]
description = "asyncio for Sublime Text"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "DeathAxe"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.8"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["src/*.py"]
exclude = ["**/__pycache__/", "**/.*/", "*.lock"]

[dependency-groups]
dev = [
    "typing-extensions>=4.13.2",
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
